Implement oidc, refactor structure
